Repaired item removal
CSS:
converted custom font sizes to rem
changed items li spacing to highlight overflowing text entries

JS
Code cleanup
Fixed how items in array are counted
Added fade-out animation on delete of items

--- a/css/alphabetizer.css
+++ b/css/alphabetizer.css
@@ -62,7 +62,7 @@ button:hover, button:focus {
 	border: solid 2px #CCCCCC;
 	/*border-right: none;*/
 	padding:5px; 
-	font-size:31px;
+	font-size:1.875rem;
 	line-height: normal;
 	height: 51px; 
 	font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
@@ -118,7 +118,7 @@ p.hint {
 }
 
 h3 {
-	font-size: 16px;
+	font-size: 1rem;
 }
 
 .options-head, .index-head {
@@ -181,7 +181,7 @@ ul .arrow.pressed {
 
 ul.alphabet {
 	list-style: none;
-	font-size: 22px;
+	font-size: 1.375rem;
 	max-height: 261px;
 	overflow: auto;
 	margin: 0;
@@ -203,7 +203,7 @@ ul.alphabet {
 
 ul.list {
 	list-style: none;
-	font-size: 22px;
+	font-size: 1.375rem;
 	position: relative;
 }
 
@@ -233,6 +233,12 @@ ul.list.deletable li:active{
     overflow: auto;
 }
 
+.items li {
+    margin-bottom: 0.4rem;
+    line-height: 1.4;
+    position: relative;
+}
+
 /*on thin screens*/
 @media only screen and (max-width: 64.063em) {
 
@@ -259,7 +265,7 @@ ul.list.deletable li:active{
 	    border-width: 1px;
 	    border-color: #CCC;
 	    padding: 5px;
-	    font-size: 24px;
+	    font-size: 1.5rem;
 	    height: 43px;
 	}
 
